--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "extends": "airbnb",
   "rules": {
     "react/prop-types": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "react/prefer-stateless-function": 0
   },
   "env": {
     "browser": true,
