feat: add flights list

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
     "react-app-rewire-styled-components": "^3.0.0",
