--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-app-rewire-styled-components": "^3.0.0",
     "react-app-rewired": "^1.4.0",
     "react-dom": "^16.2.0",
+    "react-flip-move": "^3.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "react-select": "^1.2.1",
