--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,7 @@
   "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
-    "react/prop-types": 0,
-    "import/prefer-default-export": 0
+    "react/prop-types": 0
   },
   "env": {
     "browser": true,
