--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-flip-move": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "react-select": "^2.0.0",
+    "react-select": "1.2.1",
     "redux": "^4.0.0",
     "styled-components": "^3.3.3"
   },
